# Shinku-Bot

./: bot.py  main.py  requirements.txt
YGOTools/: CMakeLists.txt  __init__.py.in
YGOTools/include/: BigwebPriceFinder.h  CardDb.h  CardSearcher.h  DBUpdater.h  SearchEngine.h  card.h  format.h  fuzzy.h  requests.h  sql.h
YGOTools/src/: BigwebPriceFinder.cpp  CardDb.cpp  CardSearcher.cpp  DBUpdater.cpp  SearchEngine.cpp  bind.cpp  card.cpp  format.cpp  fuzzy.cpp  sql.cpp
aux/db/: cards.db
aux/map/: nameAlias.json
aux/pyfunction/: function.py
helper/: CardPaginator.py  CardPriceFinder.py  jsoner.py  paginator.py  path.py
